# digital-city-project

./: .gitignore  README.md  pyproject.toml  run_all_tenders.py
scripts/: agentic_tender_pipeline.py  agentic_tender_report_pipeline.py  agentic_tender_report_ui.py  run_all_tender_ids.bat  run_all_tender_ids.ps1  run_all_tender_ids.sh  telangana_tender_cli.py
src/telangana_tenders/: __init__.py  client.py
src/tender_report_ui/: __init__.py  db.py  scanner.py  server.py
src/tender_report_ui/templates/: index.html  tender.html  vendor_detail.html  vendors.html
