[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=6.15.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "lxml>=6.0.3",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "pypdf>=5.4.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "requests>=2.33.1",
    "xlrd>=2.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
