[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=6.15.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "lxml>=6.0.3",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "pypdf>=5.4.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "requests>=2.33.1",
    "uvicorn>=0.34.0",
    "markdown-it-py>=3.0.0",
    "xlrd>=2.0.1",
    "streamlit>=1.56.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
